<resources>
    <string name="app_name">Retailistan Chat</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_register_login">RegisterActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="please_enter_username">Please enter Username!</string>
    <string name="please_enter_password">Please enter Password!</string>
    <string name="please_re_enter_password">Please re-enter Password!</string>
    <string name="register">Register</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="user_doesnt_exists">User does not exists!</string>
    <string name="internet_connection_problem">Internet connection problem!</string>
    <string name="enter_message">Enter message</string>
    <string name="logout">Logout</string>
    <string name="logged_out_success">Logged out successfully!</string>
    <string name="username_already_taken">Username already taken!</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="reply_label">Reply</string>
    <string name="notif_content_sent">Message sent!</string>
</resources>
