<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="50dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/message_edittext_background">

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="2dp"
                android:background="@null"
                android:hint="@string/username"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/message_edittext_background">

            <EditText
                android:id="@+id/editText_type_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="2dp"
                android:background="@null"
                android:hint="@string/please_enter_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/message_edittext_background">

            <EditText
                android:id="@+id/editText_re_type_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="2dp"
                android:background="@null"
                android:hint="@string/please_re_enter_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp" />

        </FrameLayout>


        <Button
            android:id="@+id/button_register"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/gradient_animation_list"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackTint"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/progressbar_background" />
    </FrameLayout>

</RelativeLayout>
